Refactor page titles and add Collegiate Strength logo to navbar

--- a/src/app.html
+++ b/src/app.html
@@ -14,7 +14,7 @@
 			rel="stylesheet"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>MTU Leaderboard</title>
+		<title>Collegiate Strength</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
