--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<link rel="icon" type="image/png" href="/favicon-48x48.png" sizes="48x48" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="shortcut icon" href="/favicon.ico" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+		<link rel="manifest" href="/site.webmanifest" />
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<link rel="stylesheet" href="/smui.css" media="(prefers-color-scheme: light)" />
@@ -12,6 +17,10 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=Material+Icons&display=swap"
 			rel="stylesheet"
+		/>
+		<meta
+			name="description"
+			content="A Collegiate Powerlifting leaderboard. See how you compare to those from other schools!"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Collegiate Strength - Powerlifting Leaderboard</title>
