Enhance SCSS configuration and update site manifest
- Updated svelte.config.js and vite.config.ts to suppress specific deprecation warnings and use the modern Sass API.
- Improved global.scss by importing only necessary Bootstrap components and added dark theme variables.
- Cleaned up app.html for better readability and updated the site.webmanifest to correct icon paths.
- Removed unnecessary imports in layout.svelte and index.ts for a cleaner structure.

--- a/src/app.html
+++ b/src/app.html
@@ -18,18 +18,25 @@
 			href="https://fonts.googleapis.com/css2?family=Material+Icons&display=swap"
 			rel="stylesheet"
 		/>
-		<meta name="description" content="Track and compare powerlifting scores across universities. View leaderboards, personal records, and compete with fellow collegiate strength athletes.">
-		<meta name="keywords" content="powerlifting, collegiate strength, university powerlifting, strength leaderboard, squat, bench, deadlift">
-		<meta name="robots" content="index, follow">
-		<meta property="og:title" content="Collegiate Strength - Powerlifting Leaderboard">
-		<meta property="og:description" content="Compare powerlifting scores across universities">
-		<meta property="og:image" content="/static/Logo.svg">
-		<meta property="og:url" content="https://collegiatestrength.org">
-		<meta name="twitter:card" content="summary_large_image">
+		<meta
+			name="description"
+			content="Track and compare powerlifting scores across universities. View leaderboards, personal records, and compete with fellow collegiate strength athletes."
+		/>
+		<meta
+			name="keywords"
+			content="powerlifting, collegiate strength, university powerlifting, strength leaderboard, squat, bench, deadlift"
+		/>
+		<meta name="robots" content="index, follow" />
+		<meta property="og:title" content="Collegiate Strength - Powerlifting Leaderboard" />
+		<meta property="og:description" content="Compare powerlifting scores across universities" />
+		<meta property="og:image" content="/Logo.svg" />
+		<meta property="og:url" content="https://collegiatestrength.org" />
+		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Collegiate Strength - Powerlifting Leaderboard</title>
 		%sveltekit.head%
-	</head>	<body data-sveltekit-preload-data="hover">
+	</head>
+	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
