Comprehensive SEO enhancement with powerlifting and collegiate strength keywords, structured data, and optimized meta tags

--- a/src/app.html
+++ b/src/app.html
@@ -18,22 +18,98 @@
 			href="https://fonts.googleapis.com/css2?family=Material+Icons&display=swap"
 			rel="stylesheet"
 		/>
+
+		<!-- Enhanced SEO Meta Tags -->
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta
 			name="description"
-			content="Track and compare powerlifting scores across universities. View leaderboards, personal records, and compete with fellow collegiate strength athletes."
+			content="Collegiate Strength - The ultimate powerlifting leaderboard for university athletes. Track squat, bench press, deadlift records, compare DOTS scores, and compete with college powerlifters nationwide. Join the premier collegiate strength sports community."
 		/>
 		<meta
 			name="keywords"
-			content="powerlifting, collegiate strength, university powerlifting, strength leaderboard, squat, bench, deadlift"
+			content="powerlifting, collegiate powerlifting, university powerlifting, college powerlifting, powerlifting leaderboard, strength sports, squat records, bench press records, deadlift records, DOTS score, powerlifting competition, collegiate strength, university strength training, college strength sports, powerlifting meets, strength athletics, raw powerlifting, equipped powerlifting, student athletes, campus recreation, strength and conditioning, powerlifting rankings, college fitness, university gym, strength training, powerlifting community, collegiate athletics, student powerlifting, university sports, college sports, strength leaderboard, powerlifting tracker, lifting records, powerlifting database, strength comparison, university rankings, college leaderboard, powerlifting stats, strength metrics, lifting competition, powerlifting results, collegiate records, university athletes, student strength, campus powerlifting, college lifting, powerlifting club, strength club, university powerlifting team, college powerlifting team, powerlifting association, collegiate powerlifting federation, student recreation, campus fitness, university recreation center, college gym, strength facility, powerlifting gym, lifting platform, barbell sports, iron sports, strength disciplines, powerlifting training, collegiate competition, university competition, college meet, powerlifting championship, strength championship, collegiate nationals, university nationals, student competition, campus competition, powerlifting event, strength event, lifting meet, powerlifting tournament, strength tournament, collegiate powerlifting meet, university powerlifting meet, college powerlifting meet, student powerlifting meet, powerlifting contest, strength contest, lifting contest, collegiate lifting, university lifting, college lifting, student lifting, campus lifting, recreational powerlifting, competitive powerlifting, powerlifting performance, strength performance, lifting performance, powerlifting achievement, strength achievement, lifting achievement, powerlifting goals, strength goals, lifting goals, powerlifting progress, strength progress, lifting progress, powerlifting development, strength development, lifting development, powerlifting improvement, strength improvement, lifting improvement"
 		/>
-		<meta name="robots" content="index, follow" />
-		<meta property="og:title" content="Collegiate Strength - Powerlifting Leaderboard" />
-		<meta property="og:description" content="Compare powerlifting scores across universities" />
+		<meta name="author" content="Ben Papp" />
+		<meta
+			name="robots"
+			content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1"
+		/>
+		<meta name="googlebot" content="index, follow" />
+		<meta name="language" content="English" />
+		<meta name="revisit-after" content="1 days" />
+		<meta name="distribution" content="global" />
+		<meta name="rating" content="general" />
+
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website" />
+		<meta
+			property="og:title"
+			content="Collegiate Strength - University Powerlifting Leaderboard & Rankings"
+		/>
+		<meta
+			property="og:description"
+			content="The premier powerlifting leaderboard for college and university athletes. Track your squat, bench, deadlift PRs and compete with collegiate powerlifters nationwide."
+		/>
 		<meta property="og:image" content="/Logo.svg" />
 		<meta property="og:url" content="https://collegiatestrength.org" />
+		<meta property="og:site_name" content="Collegiate Strength" />
+		<meta property="og:locale" content="en_US" />
+
+		<!-- Twitter -->
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Collegiate Strength - Powerlifting Leaderboard</title>
+		<meta
+			name="twitter:title"
+			content="Collegiate Strength - University Powerlifting Leaderboard"
+		/>
+		<meta
+			name="twitter:description"
+			content="Track and compare powerlifting records across universities. The ultimate collegiate strength sports platform."
+		/>
+		<meta name="twitter:image" content="/Logo.svg" />
+		<meta name="twitter:site" content="@collegiatestrength" />
+
+		<!-- Additional SEO -->
+		<meta name="theme-color" content="#0761c7" />
+		<meta name="msapplication-TileColor" content="#0761c7" />
+		<meta name="application-name" content="Collegiate Strength" />
+		<meta name="apple-mobile-web-app-title" content="Collegiate Strength" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+		<!-- Structured Data -->
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "WebApplication",
+				"name": "Collegiate Strength",
+				"description": "University powerlifting leaderboard and ranking system for collegiate athletes",
+				"url": "https://collegiatestrength.org",
+				"applicationCategory": "SportsApplication",
+				"operatingSystem": "Web",
+				"offers": {
+					"@type": "Offer",
+					"price": "0",
+					"priceCurrency": "USD"
+				},
+				"author": {
+					"@type": "Person",
+					"name": "Ben Papp"
+				},
+				"publisher": {
+					"@type": "Organization",
+					"name": "Collegiate Strength"
+				},
+				"keywords": "powerlifting, collegiate powerlifting, university strength, college athletics, squat bench deadlift, DOTS score, strength leaderboard",
+				"inLanguage": "en-US",
+				"isAccessibleForFree": true,
+				"audience": {
+					"@type": "Audience",
+					"audienceType": "College Students, University Athletes, Powerlifters"
+				}
+			}
+		</script>
+
+		<title>Collegiate Strength - University Powerlifting Leaderboard & Rankings</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
